# gm8136_sdk

./: .gitignore  ChangeLog.txt  README.md  Thumbs.db
Hardware/Docs/PCB/: GM8136S_LQFP128_PIN List & PINMUX.xlsx  GM8136_BGA196_PIN List & PINMUX.xlsx  GM813X_Schematic and PCBA check list_1V0.xls  ~$GM8138_GM8139_Pinmux_140316.xlsx
Hardware/Docs/PCB/HW Design Guide/: Thumbs.db
Hardware/Docs/PCB/Layout guide/: GM813x_PCB_Layout_Guide.xls  GM813x_PCB_Layout_Guide_ENG.xls
Hardware/EVB/GM8136S_LQFP128/Circuit/: GM8136S_LQFP128_EVB_1V0.DSN
Hardware/EVB/GM8136S_LQFP128/Layout/: GM8136S_LQFP128_EVB_1V0-1110.asc
Hardware/EVB/GM8136_BGA196/system_1V0/circuit/: GM8136_TFBGA196_EVB_1V0_SYSTEM.BOM.xlsx  GM8136_TFBGA196_SYSTEM_EVB_1V0.DSN
Hardware/EVB/GM8136_BGA196/system_1V0/layout/: GM8136_TFBGA196_SYSTEM_EVB_1V0-0828.asc
Hardware/IC Package/: Thumbs.db
Hardware/Report/USB/: Thumbs.db
Hardware/Report/USB/USB_eye/GM8136S_QFP_USB/: 0x00f8037b_QFP_HOST_eye.tsv  GM8136S_QFP_HOST_eye.html  Thumbs.db
Hardware/Report/USB/USB_eye/GM8136_BGA_USB/: GM8136_1.html  Thumbs.db
Software/Docs/: readme.txt
Software/Docs/HighLevel Userguide/: GMLIB_Sample_Code_V0.11.chm  Thumbs.db  readme.txt
Software/Docs/LowLevel Userguide/: Thumbs.db  readme.txt
Software/Embedded_Linux/image/: GM8136_1MP.NAND.jffs2.img  GM8136_1MP.SPI.jffs2.img  GM8136_2MP.NAND.jffs2.img  GM8136_2MP.SPI.jffs2.img  readme.txt  rootfs-cpio_8136.squashfs.img  uImage_8136
Software/Embedded_Linux/source/: readme.txt
Software/Embedded_Linux/source/arm-linux-3.3/: target_rootfs.tgz  target_rootfs_glibc.tgz
Software/Embedded_Linux/source/arm-linux-3.3/linux-3.3-fa/: .config  .config.old  mkimage
Software/Embedded_Linux/source/arm-linux-3.3/source/: uClibc-0.9.32.tar.bz2  uClibc-0.9.33.2.tar.bz2
Software/Embedded_Linux/source/arm-linux-3.3/target_glibc/: mksquashfs
Software/Embedded_Linux/source/arm-linux-3.3/user/: lzma-4.32.7.tar.bz2
Software/Embedded_Linux/source/arm-linux-3.3/user/cdrskin-1.3.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  arm-linux-configure.sh  bootstrap  configure  configure.ac  libburn-1.pc.in  version.h.in
Software/Embedded_Linux/source/arm-linux-3.3/user/cdrskin-1.3.2/cdrskin/: README  cdrecord_spy.sh  cdrfifo.c  cdrfifo.h  cdrskin.1  cdrskin.c  cdrskin_eng.html  cdrskin_timestamp.h  changelog.txt  cleanup.c  cleanup.h  compile_cdrskin.sh  convert_man_to_html.sh  make_timestamp.sh  wiki_plain.txt
Software/Embedded_Linux/source/arm-linux-3.3/user/cdrskin-1.3.2/doc/: cdtext.txt  comments  cookbook.txt  ddlp.txt  doxygen.conf.in  mediainfo.txt
Software/Embedded_Linux/source/arm-linux-3.3/user/cdrskin-1.3.2/libburn/: Makefile  Makefile.am  asserts.txt  cdtext.c  cleanup.c  crc.c  file.c  init.c  init.h  libburn.h  libburn.ver  libdax_msgs.c  libdax_msgs.h  libdax_msgs_to_xyz_msgs.sh  os-dummy.h  os-freebsd.h  os-libcdio.h  os-linux.h  os-solaris.h  sg-freebsd.c  sg-libcdio.c  sg-linux.c  sg-solaris.c  spc.c  spc.h  transport.h  util.c  util.h  write.c
Software/Embedded_Linux/source/arm-linux-3.3/user/cdrskin-1.3.2/test/: dewav.c  fake_au.c  libburner.c  offst_source.c  open-cd-excl.c  poll.c  structest.c  telltoc.c
Software/Embedded_Linux/source/gm8136_nsboot/: Makefile  ahb_dma.c  board.s  compile_commands.json  ddr_1000.h  ddr_1080.h  ddr_1140.h  ddr_1180.h  ddr_1240.h  ddr_1333.h  ddr_590.h  ddr_666.h  ddr_700.h  ddr_790.h  ddr_800.h  ddr_850.h  ddr_950.h  define.s  entry.c  except.s  head.S  kprint.c  ld.script  nsboot  serial.c  sizes.s  spi020.c  spi_flash.c  string.c
Software/Embedded_Linux/source/gm8136_nsboot/include/: ahb_dma.h  board.h  kprint.h  nand.h  spi020.h  spi_flash.h
Software/Embedded_Linux/source/module_2015-01-09/: module_conf
Software/Embedded_Linux/source/module_2015-01-09/AES_DES/: Makefile  gm8126.c  gm8139.c  gm8181.c  gm8210.c  platform.h  security.c
Software/Embedded_Linux/source/module_2015-01-09/LCD200_v3/: Makefile  Makefile.rules  build  ccir656_info.c  codec.c  codec.h  config  config1_8210  config1_8287  config2  config2_8181  config2_8287  config_8126  config_8136  config_8181  config_8210  cursor_comm.c  cursor_comm.h  debug.c  debug.h  dev.c  dev.h  dev_proc.c  ffb.c  ffb.h  ffb_api.h  ffb_api_compat.h  ffb_inres.c  ffb_output.c  ffbosd_api.h  frame_comm.c  frame_comm.h  gm8126.c  gm8136.c  gm8139.c  gm8181.c  gm8181t.c  gm8210.c  gm8287.c  lcd_def.h  (+12 more)
Software/Embedded_Linux/source/module_2015-01-09/SAR_ADC/: CHANGES  Makefile  gm8136.c  gm8139.c  gm8287.c  platform.c  platform.h  sar_adc_dev.c  sar_adc_dev.h  sar_adc_drv.c  sar_adc_drv.h
Software/Embedded_Linux/source/module_2015-01-09/SSP_ALSA128/: Makefile  build  clear  config.mak  debug.c  debug.h  ftssp010-gm8126.c  ftssp010-gm8181.c  ftssp010-gm8210.c  ftssp010-gm8287.c  ftssp010-pcm.c  ftssp010-pcm.h  ftssp010-ssp.c  ftssp010-ssp.h
Software/Embedded_Linux/source/module_2015-01-09/adda160/: Makefile  adda160.h  adda160_drv.c
Software/Embedded_Linux/source/module_2015-01-09/adda302/: Makefile  adda302.h  adda302_drv.c  adda302_proc.c  gm8136.c  gm8139.c
Software/Embedded_Linux/source/rootfs-cpio/: boot.sh
Software/Embedded_Linux/source/u-boot-2013.01/: Makefile  boards.cfg  compile_commands.json  make_8126  make_8129  make_8136  make_8139  make_8210  make_8287  mkconfig
Software/GM_IspTool/: ReadMe.txt  Release.txt  current.tmp  isp_demon
Software/PC-tool/flash/: cfg_build.ini  cfg_nand_ato25d1ga.txt  cfg_nand_en25ln512.txt  cfg_nand_f50l1g41a.txt  cfg_nand_gd5F1g.txt  cfg_nand_mx30lf1g08.txt  cfg_nand_w29n01gv.txt  cfg_spi_F25L64QA.txt  cfg_spi_en25q128.txt  cfg_spi_en25qh128a.txt  cfg_spi_en25qh256.txt  cfg_spi_gd25q128c.txt  cfg_spi_gd25q256c.txt  cfg_spi_gd25q64c.txt  cfg_spi_mx25L25x35E.txt  cfg_spi_mx25l12845e.txt  cfg_spi_mx25l64.txt  cfg_spi_s25fl128s.txt  cfg_spi_s25fl164.txt  cfg_spi_s25fl256s.txt  cfg_spi_w25Q25xfv.txt  cfg_spi_w25q128bv.txt  cfg_spi_w25q64.txt  flash.ini
Software/PC-tool/misc/: ReleaseNote.txt  flash.ini  lang.ini  prefer_nand.ini  prefer_nand_backup.ini  prefer_spi.ini  prefer_spi_backup.ini  spi.ini
(+1638 files in other folders)
